siliconsneaker (1.6) UNRELEASED; urgency=medium

  * Zoom graph using scroll wheel.
  * Add tooltip to graph. 
  * Move controls to bottom of map, graph panes to avoid occlusion.
 
 -- Craig Prevallet <penguintx@hotmail.com>  Sat, 23 Oct 2021 15:18:46 -0500

siliconsneaker (1.5) UNRELEASED; urgency=medium

  * Make the summary report frame/scrolled window expand to fill. 
  * Corrected graph tool-tip. LMB vs. RMB switched.
 
 -- Craig Prevallet <penguintx@hotmail.com>  Fri, 22 Oct 2021 15:18:46 -0500


siliconsneaker (1.4) UNRELEASED; urgency=medium

  * Synchronize map, graph updates on Windows when using slider.
 
 -- Craig Prevallet <penguintx@hotmail.com>  Thu, 21 Oct 2021 15:18:46 -0500


siliconsneaker (1.3) UNRELEASED; urgency=medium

  * Bug fix to load Google Streetmaps under Windows.
  * Choose a more visible heatmap scheme.
  * New start/end/position markers on map.
  * Make the slider feel smoother by basing it on a per-measurement basis.
  * Compile with O2 optimization.
 
 -- Craig Prevallet <penguintx@hotmail.com>  Wed, 9 Oct 2021 15:18:46 -0500


siliconsneaker (1.2) UNRELEASED; urgency=medium

  * Add support for TCX formatted files.
 
 -- Craig Prevallet <penguintx@hotmail.com>  Wed, 5 Oct 2021 15:18:46 -0500

siliconsneaker (1.1) UNRELEASED; urgency=medium

  * Add resizeable panes and mimetypes.
 
 -- Craig Prevallet <penguintx@hotmail.com>  Wed, 30 Sept 2021 15:30:46 -0500

siliconsneaker (1.0) UNRELEASED; urgency=medium

  * Initial release.

 -- Craig Prevallet <penguintx@hotmail.com>  Wed, 15 Sep 2021 15:18:46 -0500